<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:text="@string/first_TV"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/inputN"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="5dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />
    <!--app:layout_constraintBottom_toTopOf="@+id/progressBar"-->

    <!--app:layout_constraintTop_toBottomOf="@+id/progressBar" />-->

    <Button
        android:id="@+id/findAllN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/find_all_n_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/fattorizzaInPrimi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isPrime" />

    <Button
        android:id="@+id/findTheNthPrime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:text="@string/nth_prime_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trovaLaCoppiaN" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="191dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/isPrime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputN" />

    <Button
        android:id="@+id/isPrime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/is_prime_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/findAllN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    <Button
        android:id="@+id/fattorizzaInPrimi"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/factorize_n_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/EuleroFunction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findAllN" />

    <Button
        android:id="@+id/EuleroFunction"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/eulero_func_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/trovaLaCoppiaN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fattorizzaInPrimi" />

    <Button
        android:id="@+id/trovaLaCoppiaN"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:text="@string/nth_twin_couple_button"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/findTheNthPrime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EuleroFunction" />

    <!--<ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="181dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="182dp"
        android:layout_marginBottom="10dp"
        android:visibility="invisible"
        android:indeterminateDuration="5000"
        app:layout_constraintBottom_toTopOf="@+id/findAllN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputN" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>